sort.basic.comb.AlgCombSort.scala.error
Compilation error:
AlgCombSort:15: error: not found: value estPlusPetit
    if(!estPlusPetit(i,i+ecart)){
        ^